--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,13 +29,10 @@ services:
 
     # db mysql
     db:
-        image: mysql:5.7.22
+        image: mysql:8.0
         restart: unless-stopped
-        environment:
-            MYSQL_DATABASE: ${DB_DATABASE:-laravel}
-            MYSQL_ROOT_PASSWORD: ${DB_PASSWORD:-root}
-            MYSQL_PASSWORD: ${DB_PASSWORD:-userpass}
-            MYSQL_USER: ${DB_USERNAME:-username}
+        env_file:
+            - .env
         volumes:
             - ./.docker/mysql/dbdata:/var/lib/mysql
         ports:
